--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           <div class="d-flex align-items-center justify-content-center">
             <div class="clock-container container bg-white">
               <div
-                class="form-check form-switch d-flex justify-content-center mb-2"
+                class="form-check form-switch d-flex justify-content-center mb-2 mt-5"
               >
                 <input
                   class="form-check-input"
@@ -237,8 +237,8 @@
 
           <!-- Table -->
           <div class="d-flex pt-5 align-items-center justify-content-center">
-            <div class="container p-5 bg-white">
-              <table id="timeTable" class="table">
+            <div class="alarm-container container p-5 bg-white">
+              <table id="timeTable" class="table alarm-table">
                 <thead>
                   <tr>
                     <th scope="col">Time</th>
