--- a/time.html
+++ b/time.html
@@ -145,6 +145,49 @@
 
                     </div>
 
+                    <div class="col-sm p-3 min-vh-100 bg-body-tertiary">
+                        <!-- card individual -->
+                        <div class="row">
+                            <div class="card col-md-3 p-0 m-3">
+                                <div class="card-header fs-5">
+                                New York
+                                </div>
+                                <div class="card-body">
+                                    <p class="world-time text-center text-secondary mt-2">
+                                        11.50.25
+                                        <span>
+                                            AM
+                                        </span>
+                                    </p>
+                                    <p class="world-date text-center fw-bolder text-secondary">
+                                        Today, - 9.30
+                                    </p>
+                                </div>
+                            </div>
+                            <!-- card individual end-->
+    
+                            <!-- card individual -->
+                            <div class="card col-md-3 p-0 m-3">
+                                <div class="card-header fs-5">
+                                New York
+                                </div>
+                                <div class="card-body">
+                                    <p class="world-time text-center text-secondary mt-2">
+                                        11.50.25
+                                        <span>
+                                            AM
+                                        </span>
+                                    </p>
+                                    <p class="world-date text-center fw-bolder text-secondary">
+                                        Today, - 9.30
+                                    </p>
+                                </div>
+                            </div>
+                            <!-- card individual end-->
+                        </div>
+                        
+                    </div>
+
                 </div>
             </div>
         </div>
