--- a/index.html
+++ b/index.html
@@ -43,9 +43,12 @@
     <nav class="navbar bg-primary">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <!-- <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Bootstrap" width="30" height="24"> -->
+          <div class="d-flex">
+            <img src="/./images/clock.png" alt="Clock" width="50" height="50">
 
-          <h2 class="text-white">vClock</h2>
+            <h2 class="text-white p-2 fw-bolder">Clock</h2>
+          </div>
+          
         </a>
 
         <ul class="nav justify-content-end">
@@ -99,7 +102,7 @@
             class="d-flex flex-sm-column flex-row flex-nowrap align-items-center sticky-top"
           >
             <ul
-              class="nav nav-pills nav-flush flex-sm-column w-100 flex-row flex-nowrap mb-auto text-center align-items-center"
+              class="nav nav-flush flex-sm-column w-100 flex-row flex-nowrap mb-auto text-center align-items-center"
             >
               <li class="active w-100">
                 <a href="index.html" class="nav-link text-white">
