--- a/timer.html
+++ b/timer.html
@@ -18,11 +18,11 @@
             <div class="container">
                 <a
                     class="navbar-brand" href="#">
-                    <!-- <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Bootstrap" width="30" height="24"> -->
-
-                    <h2 class="text-white">
-                        vClock
-                    </h2>
+                    <div class="d-flex">
+                        <img src="/./images/clock.png" alt="Clock" width="50" height="50">
+            
+                        <h2 class="text-white p-2 fw-bolder">Clock</h2>
+                      </div>
                 </a>
 
                 <ul class="nav justify-content-end">
