--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="container">
         <a class="navbar-brand" href="#">
           <div class="d-flex">
-            <img src="/./images/clock.png" alt="Clock" width="50" height="50">
+            <img src="./images/clock.png" alt="Clock" width="50" height="50">
 
             <h2 class="text-white p-2 fw-bolder">Clock</h2>
           </div>
