--- a/time.html
+++ b/time.html
@@ -128,7 +128,14 @@
                 <div class="col-sm p-3 min-vh-100 bg-body-tertiary">
                     <!-- content -->
                     <div class="d-flex align-items-center justify-content-center">
-                        <div class="clock-container container bg-white">
+                        <div class="clock-container container bg-white" id="clock-container">
+
+                            <div class="d-flex align-items-center justify-content-end mt-3 ">
+                                <button class="bg-white border-0 px-2" onclick="var el = document.getElementById('clock-container'); el.requestFullscreen();">
+                                  <i class="bi bi-arrows-fullscreen"></i>
+                                </button>
+                              </div>
+                              
                             <h3 class="mt-5 text-center fw-bolder text-secondary">
                                 Time Now
                             </h3>
