--- a/time.html
+++ b/time.html
@@ -28,7 +28,7 @@
                 <ul class="nav justify-content-end">
 
                     <li class="nav-item fs-5">
-                        <a class="text-white nav-link" href="#">
+                        <a class="text-white nav-link" href="holidays.html">
                             Holidays
                         </a>
                     </li>
