--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         <ul class="nav justify-content-end">
           <li class="nav-item fs-5">
-            <a class="text-white nav-link" href="#"> Holidays </a>
+            <a class="text-white nav-link" href="holidays.html"> Holidays </a>
           </li>
 
           <li class="nav-item fs-5 dropdown" id="dropdownMenuButton1">
