--- a/index.html
+++ b/index.html
@@ -37,21 +37,144 @@
         -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
         background-color: #d62929;
       }
+
+      path {
+        stroke: #09151b;
+        stroke-linecap: round;
+        stroke-width: 42;
+        fill: none;
+      }
+      #sec {
+        stroke: #6f7f24;
+        stroke-width: 20;
+      }
+      #min {
+        stroke: #3d601b;
+        stroke-width: 38;
+      }
+      #hour {
+        stroke: #13441e;
+        stroke-width: 38;
+      }
+
+      @keyframes shake {
+        0% {
+          -webkit-transform: translate(2px, 1px) rotate(0deg);
+        }
+        10% {
+          -webkit-transform: translate(-1px, -2px) rotate(-1deg);
+        }
+        20% {
+          -webkit-transform: translate(-3px, 0px) rotate(1deg);
+        }
+        30% {
+          -webkit-transform: translate(0px, 2px) rotate(0deg);
+        }
+        40% {
+          -webkit-transform: translate(1px, -1px) rotate(1deg);
+        }
+        50% {
+          -webkit-transform: translate(-1px, 2px) rotate(-1deg);
+        }
+        60% {
+          -webkit-transform: translate(-3px, 1px) rotate(0deg);
+        }
+        70% {
+          -webkit-transform: translate(2px, 1px) rotate(-1deg);
+        }
+        80% {
+          -webkit-transform: translate(-1px, -1px) rotate(1deg);
+        }
+        90% {
+          -webkit-transform: translate(2px, 2px) rotate(0deg);
+        }
+        100% {
+          -webkit-transform: translate(1px, -2px) rotate(-1deg);
+        }
+      }
+      .box {
+      }
+
+      .box #sound-01 {
+        position: absolute;
+        top: 5px;
+        left: -25px;
+        width: 40px;
+        opacity: 0;
+      }
+      .box #sound-02 {
+        position: absolute;
+        top: 5px;
+        right: -25px;
+        width: 40px;
+        opacity: 0;
+      }
+
+      @keyframes sound {
+        0% {
+          transform: rotate(-5deg);
+        }
+        100% {
+          transform: rotate(5deg);
+        }
+      }
     </style>
   </head>
   <body>
-   
+    <!-- Toast Code -->
+    <div
+      class="toast-container position-fixed top-50 start-50 translate-middle p-3"
+    >
+      <div
+        id="liveToast"
+        class="toast"
+        role="alert"
+        aria-live="assertive"
+        aria-atomic="true"
+      >
+        <div class="toast-header bg-danger text-white">
+          <i class="fas fa-alarm-clock"></i>
+          <strong class="me-auto">Alarm Alert!</strong>
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="toast"
+            aria-label="Close"
+          ></button>
+        </div>
+        <div class="toast-body bg-white">
+          Press <b>Space</b> to Stop Alarm!
+          <div class="mt-2 pt-2 border-top">
+            <button
+              type="button"
+              class="btn btn-primary btn-sm"
+              onClick="snoozeButton()"
+              data-bs-dismiss="toast"
+            >
+              Stop Alarm
+            </button>
+            <button
+              type="button"
+              class="btn btn-secondary btn-sm"
+              data-bs-dismiss="toast"
+            >
+              Close
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Toast End -->
+    <!-- Navbar Start -->
 
-  <!-- Navbar Start -->
     <nav class="navbar bg-primary">
       <div class="container">
         <a class="navbar-brand" href="#">
           <div class="d-flex">
-            <img src="./images/clock.png" alt="Clock" width="50" height="50">
+            <img src="./images/clock.png" alt="Clock" width="50" height="50" />
 
             <h2 class="text-white p-2 fw-bolder">Clock</h2>
           </div>
-          
         </a>
 
         <ul class="nav justify-content-end">
@@ -141,10 +264,15 @@
         <div class="col-sm p-3 min-vh-100 bg-body-tertiary">
           <!-- content -->
           <div class="d-flex align-items-center justify-content-center">
-            <div class="clock-container container bg-white" id="clock-container">
-
-              <div class="d-flex align-items-center justify-content-end mt-3 ">
-                <button class="bg-white border-0 px-2" onclick="var el = document.getElementById('clock-container'); el.requestFullscreen();">
+            <div
+              class="clock-container container bg-white"
+              id="clock-container"
+            >
+              <div class="d-flex align-items-center justify-content-end mt-3">
+                <button
+                  class="bg-white border-0 px-2"
+                  onclick="var el = document.getElementById('clock-container'); el.requestFullscreen();"
+                >
                   <i class="bi bi-arrows-fullscreen"></i>
                 </button>
               </div>
@@ -160,6 +288,20 @@
                   style="scale: 1.5"
                   onclick="toggle()"
                 />
+              </div>
+              <div class="d-flex justify-content-center mb-2 box" id="analog">
+                <div class="clockCont" style="position: relative">
+                  <svg height="200" width="200" viewBox="0 0 1000 1000">
+                    <path
+                      d="M978,500c0,263.99-214.01,478-478,478s-478-214.01-478-478,214.01-478,478-478,478,214.01,478,478zm-888.93,237.25,20.179-11.65m779.16-449.85l22.517-13m-648.18,648.18,11.65-20.18m449.85-779.16l13-22.517m-711.75,410.93h23.305m899.7,0h26m-885.43-237.25,20.179,11.65m779.16,449.85,22.517,13m-648.18-648.18l11.652,20.183m449.85,779.16,13,22.517m-237.25-885.43v23.305m0,899.7,0,26"
+                    />
+                    <path d="M500,500,500,236" id="hour" />
+                    <path d="M500,500,500,120" id="min" />
+                    <path d="M500,500,500,90" id="sec" />
+                  </svg>
+                  <img id="sound-01" src="./images/sound_01.svg" alt="" />
+                  <img id="sound-02" src="./images/sound_02.svg" alt="" />
+                </div>
               </div>
               <p
                 class="clock-time text-center text-secondary mt-2"
@@ -189,6 +331,13 @@
                   disabled
                 >
                   Stop Alarm
+                </button>
+                <button
+                  type="button"
+                  id="Initiate"
+                  class="btn btn-success ms-1"
+                >
+                  Initiate
                 </button>
               </div>
 
@@ -268,7 +417,6 @@
 
     <!-- /#sidebar -->
 
-
     <script>
       // Get the toggle button element
       const toggleButton = document.getElementById("toggle-btn");
@@ -279,258 +427,7 @@
         document.body.classList.toggle("dark-mode");
       });
     </script>
-
-    <script>
-      var timeElement = document.getElementById("timedisplay");
-      var toggleSwitch = document.getElementById("toggSwitch");
-      var stopButton = document.getElementById("stop");
-      const months = [
-        "January",
-        "February",
-        "March",
-        "April",
-        "May",
-        "June",
-        "July",
-        "August",
-        "September",
-        "October",
-        "November",
-        "December",
-      ];
-      const week = [
-        "Sunday",
-        "Monday",
-        "Tuesday",
-        "Wednesday",
-        "Thursday",
-        "Friday",
-        "Saturday",
-      ];
-      var toggleAmPm = localStorage.getItem("AMPMToggle") || "false";
-      if (toggleAmPm == "true") {
-        console.log("togg", toggleAmPm);
-        toggleSwitch.checked = true;
-      }
-      const toggle = () => {
-        console.log(toggleSwitch.value);
-        if (toggleAmPm == "false") {
-          toggleAmPm = "true";
-          localStorage.setItem("AMPMToggle", "true");
-        } else {
-          toggleAmPm = "false";
-          localStorage.setItem("AMPMToggle", "false");
-        }
-      };
-      setInterval(() => {
-        var time = new Date();
-        if (toggleAmPm == "false") {
-          timeElement.innerHTML = `${time.getHours()} : ${time.getMinutes()} : ${time.getSeconds()}<br>
-          <p class="clock-date text-center fw-bolder text-secondary">
-            ${week[time.getDay()]} - ${
-            months[time.getMonth()]
-          } ${time.getDate()} ${time.getFullYear()}
-              </p>
-        `;
-        } else {
-          timeElement.innerHTML = `${formatAMPM(time)}<br>
-          <p class="clock-date text-center fw-bolder text-secondary">
-            ${week[time.getDay()]} - ${
-            months[time.getMonth()]
-          } ${time.getDate()} ${time.getFullYear()}
-              </p>`;
-        }
-      }, 1000);
-
-      function formatAMPM(date) {
-        var hours = date.getHours();
-        var minutes = date.getMinutes();
-        var ampm = hours >= 12 ? "PM" : "AM";
-        hours = hours % 12;
-        hours = hours ? hours : 12;
-        minutes = minutes < 10 ? "0" + minutes : minutes;
-        var strTime =
-          hours +
-          " : " +
-          minutes +
-          " : " +
-          date.getSeconds() +
-          " <span>" +
-          ampm +
-          "</span>";
-        return strTime;
-      }
-
-      var error = document.getElementById("error");
-      var alarmObj = document.getElementById("alarm");
-      alarmObj.loop = true;
-      var loadArray = JSON.parse(localStorage.getItem("timeArray")) || [];
-      var timeArray = loadArray.map(function (item) {
-        var firstTwoDigits = item.substring(0, 2);
-        var remainingDigits = item.substring(2);
-        return firstTwoDigits + ":" + remainingDigits;
-      });
-      var saveButton = document.getElementById("save");
-      var tbody = document.getElementById("tbody");
-      var timeInput = document.getElementById("timeInput");
-      const timedisplay = document.getElementById("remaintime");
-
-      window.addEventListener("load", function () {
-        timeArray.sort();
-        loadArray.sort();
-        timeArray.forEach(function (time) {
-          insertRow(time);
-        });
-      });
-
-      function insertRow(time) {
-        tbody.innerHTML += `
-    <tr>
-      <td>${time}</td>
-      <td><button class="btn btn-danger btn-sm" onclick="removeTime('${time}')"><i class="fas fa-trash-alt"></i></button></td>
-    </tr>`;
-      }
-
-      function removeTime(time) {
-        const index = timeArray.indexOf(time);
-        if (index !== -1) {
-          timeArray.splice(index, 1);
-          loadArray.splice(index, 1);
-          localStorage.setItem("timeArray", JSON.stringify(loadArray));
-          tbody.innerHTML = "";
-          timeArray.forEach(function (time) {
-            insertRow(time);
-          });
-        }
-      }
-
-      function saveTime() {
-        const timeValue = timeInput.value;
-        if (timeValue == "") {
-          error.innerHTML = `Input Correct Time`;
-          return;
-        }
-        console.log(timeValue);
-        const insertIndex = timeArray.findIndex((time) => time > timeValue);
-        if (!loadArray.includes(timeValue.replace(":", ""))) {
-          timeArray.splice(
-            insertIndex !== -1 ? insertIndex : timeArray.length,
-            0,
-            timeValue
-          );
-          loadArray.splice(
-            insertIndex !== -1 ? insertIndex : loadArray.length,
-            0,
-            timeValue.replace(":", "")
-          );
-          localStorage.setItem("timeArray", JSON.stringify(loadArray));
-          error.innerHTML = "";
-          timeInput.value = "";
-          tbody.innerHTML = "";
-          timeArray.forEach(function (time) {
-            insertRow(time);
-          });
-          var myModalEl = document.getElementById("exampleModal");
-          var modal = bootstrap.Modal.getInstance(myModalEl);
-          modal.hide();
-        } else {
-          error.innerHTML = `Time Already Exists!`;
-        }
-      }
-
-      function playAlarm() {
-        stopButton.disabled = false;
-        alarmObj.play();
-      }
-      function snoozeButton() {
-        alarmObj.pause();
-        alarmObj.currentTime = 0;
-        stopButton.disabled = true;
-      }
-
-      function checkCurrentTime() {
-        var currentTime = new Date();
-        var currentHour = currentTime.getHours();
-        var currentMinute = currentTime.getMinutes();
-        var currentTimeInMinutes = currentHour * 60 + currentMinute;
-
-        if (timeArray.length === 0) {
-          timedisplay.innerHTML = "No Upcoming Alarms";
-          return;
-        }
-
-        var closestTime = timeArray.reduce(function (closest, time) {
-          var [closestHour, closestMinute] = closest.split(":").map(Number);
-          var [timeHour, timeMinute] = time.split(":").map(Number);
-
-          var closestTimeInMinutes = closestHour * 60 + closestMinute;
-          var timeInMinutes = timeHour * 60 + timeMinute;
-
-          var closestTimeDiff = closestTimeInMinutes - currentTimeInMinutes;
-          var timeDiff = timeInMinutes - currentTimeInMinutes;
-
-          if (closestTimeDiff < 0 && timeDiff >= 0) {
-            return time;
-          } else if (
-            closestTimeDiff >= 0 &&
-            timeDiff >= 0 &&
-            timeDiff < closestTimeDiff
-          ) {
-            return time;
-          } else {
-            return closest;
-          }
-        });
-
-        if (
-          closestTime ===
-          currentTime.toLocaleTimeString([], {
-            hour: "2-digit",
-            minute: "2-digit",
-          })
-        ) {
-          console.log("Alarm On!");
-          playAlarm();
-          var matchedIndex = timeArray.findIndex(
-            (time) => time === closestTime
-          );
-          timeArray.splice(matchedIndex, 1);
-          loadArray.splice(matchedIndex, 1);
-          localStorage.setItem("timeArray", JSON.stringify(loadArray));
-          tbody.innerHTML = "";
-          timeArray.forEach(function (time) {
-            insertRow(time);
-          });
-        } else {
-          var [closestHour, closestMinute] = closestTime.split(":").map(Number);
-
-          var remainingHours, remainingMinutes;
-          if (closestTime === "00:00") {
-            remainingHours = 24 - currentHour;
-            remainingMinutes = 60 - currentMinute;
-          } else {
-            var closestTimeInMinutes = closestHour * 60 + closestMinute;
-            if (closestTimeInMinutes >= currentTimeInMinutes) {
-              remainingHours = Math.floor(
-                (closestTimeInMinutes - currentTimeInMinutes) / 60
-              );
-              remainingMinutes =
-                (closestTimeInMinutes - currentTimeInMinutes) % 60;
-            } else {
-              remainingHours = Math.floor(
-                (1440 - currentTimeInMinutes + closestTimeInMinutes) / 60
-              );
-              remainingMinutes =
-                (1440 - currentTimeInMinutes + closestTimeInMinutes) % 60;
-            }
-          }
-
-          timedisplay.innerHTML = `Next Alarm In ${remainingHours} Hr ${remainingMinutes} Min`;
-        }
-      }
-
-      setInterval(checkCurrentTime, 1000);
-    </script>
+    <script src="./js/alarm.js"></script>
 
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
