--- a/time.html
+++ b/time.html
@@ -144,7 +144,7 @@
                         </div>
                     </form>
                 </div>
-                <div class="col-sm p-3 min-vh-100 bg-body-tertiary" >
+                <div class="col-sm p-3 bg-body-tertiary timezoneContainer" >
                     <div class="row"id="timezoneContainer">
 
                     </div>
@@ -156,8 +156,8 @@
 
     <div class="card col-md-3 p-0 m-3 d-none" id="timezoneItem">
         <div class="card-header fs-5" id="timezoneHead">
-            <p id="headText"></p>
-            <button type="button" class="deleteBtn">Delete</button>
+            <p id="headText" class="headText"></p>
+            <button type="button" class="deleteBtn"><i class="bi bi-trash-fill"></i></button>
         </div>
         <div class="card-body" id="timezoneMain">
             <p class="world-time text-center text-secondary mt-2" id="timezoneTime">
