--- a/index.html
+++ b/index.html
@@ -426,9 +426,9 @@
       
       
       if (darkThemeToggle == "true") {
-      document.body.classList.toggle("dark-mode");
+      document.body.classList.add("dark-mode");
       } else {
-        document.body.classList.toggle("dark-mode");
+        document.body.classList.remove("dark-mode");
         }
       toggleButton.addEventListener("click", function () {
         // Toggle the 'dark-mode' class on the body element
